Screenshot, Fix z-index of tooltip, wrap (actions)

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -89,4 +89,5 @@ a.enhancer-queueButtonAll {
 .enhancer-tooltip {
   position: absolute;
   bottom: 48px;
+  z-index: 999;
 }
